Updated employment status
