# modules/employment/employment.controller.go
@@ -20,7 +20,7 @@ func NewController(service interfaces.EmploymentService) *employmentController {
 // CreateEmployeeType godoc
 // @Summary Create employee type
 // @Description Create a new employee type with manual ID and name of the type
-// @tags EmployeeTypes
+// @tags Employee Type
 // @Accept json
 // @Produce json
 // @Param employeeTypeData body models.CreateEmployeeTypeRequest true "EmployeeType data"
@@ -60,7 +60,7 @@ func (controller *employmentController) CreateEmployeeType(ctx *gin.Context) {
 // DeleteEmployeeType godoc
 // @Summary Delete an employee type
 // @Description Delete employee type by id
-// @Tags EmployeeTypes
+// @Tags Employee Type
 // @Accept json
 // @Produce json
 // @Param employee_type_id path string true "EmployeeType ID"
@@ -80,7 +80,7 @@ func (controller *employmentController) DeleteEmployeeType(ctx *gin.Context) {
 // GetEmployeeTypes godoc
 // @Summary Get all employee types
 // @Description Fetch all employee types
-// @Tags EmployeeTypes
+// @Tags Employee Type
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Authorization token"
@@ -93,19 +93,20 @@ func (controller *employmentController) GetEmployeeTypes(ctx *gin.Context) {
 	ctx.JSON(status, responseData)
 }
 
+// ===========================================
 // CreateEmploymentStatus godoc
-// @Summary Create employee type
-// @Description Create a new employee type with manual ID and name of the type
-// @tags EmployeeTypes
+// @Summary Create employment status
+// @Description Create a new employment status with manual ID and name of the type
+// @tags Employment Status
 // @Accept json
 // @Produce json
-// @Param employeeTypeData body models.CreateEmployeeTypeRequest true "EmployeeType data"
+// @Param employmentStatusData body models.CreateEmploymentStatusRequest true "EmploymentStatus data"
 // @Param Authorization header string true "Authorization token"
 // @Success 201
 // @Failure 400
 // @Failure 409
 // @Failure 500
-// @Router /api/employment/create [post]
+// @Router /api/employment/create/employment-status [post]
 func (controller *employmentController) CreateEmploymentStatus(ctx *gin.Context) {
 	ctx.Header("Content-type", "application/json")
 	name, exists := ctx.Get("name")
@@ -130,5 +131,41 @@ func (controller *employmentController) CreateEmploymentStatus(ctx *gin.Context)
 
 	responseData, status := controller.service.CreateEmploymentStatus(&employmentStatusData, name.(string))
 
+	ctx.JSON(status, responseData)
+}
+
+// DeleteEmploymentStatus godoc
+// @Summary Delete an employment statuses
+// @Description Delete employment statuses by id
+// @Tags Employment Status
+// @Accept json
+// @Produce json
+// @Param employment_status_id path string true "EmploymentStatus ID"
+// @Param Authorization header string true "Authorization token"
+// @Success 200
+// @Failure 404
+// @Failure 500
+// @Router /api/employment/delete/employment-status/{employment_status_id} [delete]
+func (controller *employmentController) DeleteEmploymentStatus(ctx *gin.Context) {
+	id := ctx.Param("employment_status_id")
+
+	responseData, status := controller.service.DeleteEmploymentStatus(id)
+
+	ctx.JSON(status, responseData)
+}
+
+// GetEmploymentStatuses godoc
+// @Summary Get all employment statuses
+// @Description Fetch all employment statuses
+// @Tags Employment Status
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Authorization token"
+// @Success 200
+// @Failure 404
+// @Failure 500
+// @Router /api/employment/employment-statuses [get]
+func (controller *employmentController) GetEmploymentStatuses(ctx *gin.Context) {
+	responseData, status := controller.service.GetEmploymentStatuses()
 	ctx.JSON(status, responseData)
 }
